5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4152/executions/1723_2506.log
== TEST (2019-05-14 11:03:21) 
-- CODE:
qi = int(input("Quantidade inicial de tambaqui: "))
pc = int(input("Percentual de de crescimento anual dos tambaquis no tanque: "))
qf = int(input("Quantidades de tambaquis retirados todos os anos para venda: "))
a = 0
taxa = 
perc = pc / 100
while (qi > 0) and (qi <= 12000):
	qi = qi + (qi * perc)
	qf = qi - qf
	a = a + 1
if (qf <= 0):
	print("EXTINCAO")
elif (qf > 1200):
	print("LIMITE")
print(a)
	
		
-- ERROR:
File "XXXX", line 5
    taxa = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:04:27) 
-- CODE:
qi = int(input("Quantidade inicial de tambaqui: "))
pc = int(input("Percentual de de crescimento anual dos tambaquis no tanque: "))
qf = int(input("Quantidades de tambaquis retirados todos os anos para venda: "))
a = 0
perc = pc / 100
while (qi > 0) and (qi <= 12000):
	qi = qi + (qi * perc)
	qf = qi - qf
	a = a + 1
if (qf <= 0):
	print("EXTINCAO")
elif (qf > 1200):
	print("LIMITE")
print(a)
	
		
-- OUTPUT:
LIMITE
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:07:01) 
-- CODE:
qi = int(input("Quantidade inicial de tambaqui: "))
pc = int(input("Percentual de de crescimento anual dos tambaquis no tanque: "))
qf = int(input("Quantidades de tambaquis retirados todos os anos para venda: "))
e = 0
a = 0
perc = pc / 100
while (qi > 0) and (qi <= 12000):
	qi = qi + (qi * perc)
	qf = qi - qf
	a = a + 1
	e = e + 1
if (qf <= 0):
	print("EXTINCAO")
elif (qf > 1200):
	print("LIMITE")
print(a)
	
		
-- OUTPUT:
LIMITE
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:09:20) 
-- CODE:
qi = int(input("Quantidade inicial de tambaqui: "))
pc = int(input("Percentual de de crescimento anual dos tambaquis no tanque: "))
qf = int(input("Quantidades de tambaquis retirados todos os anos para venda: "))
a = 0
perc = pc / 100
while (qi > 0) and (qi <= 12000):
	qi = qi + (qi * perc)
	qf = qi - qf
	a = a + 1
if (qf <= 0):
	print("EXTINCAO")
elif (qf > 1200):
	print("LIMITE")
print(a)
	
		
-- OUTPUT:
LIMITE
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:09:55) 
-- CODE:
qi = int(input("Quantidade inicial de tambaqui: "))
pc = int(input("Percentual de de crescimento anual dos tambaquis no tanque: "))
qf = int(input("Quantidades de tambaquis retirados todos os anos para venda: "))
a = 0
perc = pc / 100
while (qi > 0) and (qi <= 12000):
	qi = qi + (qi * perc)
	qf = qi - qf
	a = a + 1
if (qf <= 0):
	print("EXTINCAO")
elif (qf > 1200):
	print("LIMITE")
print(a)
	
		
-- EXECUTION TIME:
0.141194
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
40
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
10
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:10:52) 
-- CODE:
qi = int(input("Quantidade inicial de tambaqui: "))
pc = int(input("Percentual de de crescimento anual dos tambaquis no tanque: "))
qf = int(input("Quantidades de tambaquis retirados todos os anos para venda: "))
a = 0
perc = pc / 100
while (qi > 0) and (qi <= 12000):
	qi = qi + (qi * perc)
	qi = qi - qf
	a = a + 1
if (qf <= 0):
	print("EXTINCAO")
elif (qf > 1200):
	print("LIMITE")
print(a)
	
		
-- OUTPUT:
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:12:24) 
-- CODE:
qi = int(input("Quantidade inicial de tambaqui: "))
pc = int(input("Percentual de de crescimento anual dos tambaquis no tanque: "))
qf = int(input("Quantidades de tambaquis retirados todos os anos para venda: "))
a = 0
perc = pc / 100
while (qi > 0) and (qi <= 12000):
	qi = qi + (qi * perc)
	qi = qi - qf
	a = a + 1
if (qf <= 0):
	total = "EXTINCAO"
elif (qf > 1200):
	total = "LIMITE"
print(total)
print(a)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(total)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:12:57) 
-- CODE:
qi = int(input("Quantidade inicial de tambaqui: "))
pc = int(input("Percentual de de crescimento anual dos tambaquis no tanque: "))
qf = int(input("Quantidades de tambaquis retirados todos os anos para venda: "))
a = 0
perc = pc / 100
while (qi > 0) and (qi <= 12000):
	qi = qi + (qi * perc)
	qi = qi - qf
	a = a + 1
if (qf <= 0):
	t = "EXTINCAO"
elif (qf > 1200):
	t = "LIMITE"
print(t)
print(a)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(t)
NameError: name 't' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:14:10) 
-- CODE:
qi = int(input("Quantidade inicial de tambaqui: "))
pc = int(input("Percentual de de crescimento anual dos tambaquis no tanque: "))
qf = int(input("Quantidades de tambaquis retirados todos os anos para venda: "))
a = 0
perc = pc / 100
while (qi > 0) and (qi <= 12000):
	qi = qi + (qi * perc)
	qi = qi - qf
	a = a + 1
if (qf > 1200):
	t = "LIMITE"
else:
	t = "EXTINCAO"
print(t)
print(a)
		
-- OUTPUT:
EXTINCAO
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:14:39) 
-- CODE:
qi = int(input("Quantidade inicial de tambaqui: "))
pc = int(input("Percentual de de crescimento anual dos tambaquis no tanque: "))
qf = int(input("Quantidades de tambaquis retirados todos os anos para venda: "))
a = 0
perc = pc / 100
while (qi > 0) and (qi <= 12000):
	qi = qi + (qi * perc)
	qi = qi - qf
	a = a + 1
if (qi >= 1200):
	t = "LIMITE"
else:
	t = "EXTINCAO"
print(t)
print(a)
		
-- OUTPUT:
EXTINCAO
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:14:50) 
-- CODE:
qi = int(input("Quantidade inicial de tambaqui: "))
pc = int(input("Percentual de de crescimento anual dos tambaquis no tanque: "))
qf = int(input("Quantidades de tambaquis retirados todos os anos para venda: "))
a = 0
perc = pc / 100
while (qi > 0) and (qi <= 12000):
	qi = qi + (qi * perc)
	qi = qi - qf
	a = a + 1
if (qi >= 1200):
	t = "LIMITE"
else:
	t = "EXTINCAO"
print(t)
print(a)
		
-- EXECUTION TIME:
0.192519
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
